--- a/src/app/components/cifrado-asimetrico/cifrado-asimetrico.html
+++ b/src/app/components/cifrado-asimetrico/cifrado-asimetrico.html
@@ -127,7 +127,7 @@
             </div>
 
             <div class="bg-gray-800 p-6 rounded-xl shadow-lg w-full mt-6">
-                <label for="passphraseDescifrado" class="block text-green-400 font-semibold mb-2">Ingrese passphrase
+                <label for="passphraseDescifrado" class="block text-green-400 font-semibold mb-2">Ingrese la frase
                     para desbloquear clave privada</label>
                 <input id="passphraseDescifrado" type="password" [(ngModel)]="passphraseParaDescifrado"
                     placeholder="Passphrase para clave privada" autocomplete="off"
