--- a/src/app/components/cifrado-asimetrico/cifrado-asimetrico.html
+++ b/src/app/components/cifrado-asimetrico/cifrado-asimetrico.html
@@ -1,6 +1,10 @@
-<app-nav-bar></app-nav-bar>
 
-<div class="full-screen-container flex items-center justify-center min-h-screen bg-black text-white px-4">
+<app-nav-bar></app-nav-bar>
+<br><br><br>
+
+
+<div class="full-screen-container flex items-center justify-center min-h-screen text-white px-4">
+
     <div class="w-full max-w-4xl bg-black rounded-2xl shadow-xl p-8">
         <div class="bg-gray-900 p-6 rounded-xl shadow-lg w-full space-y-6">
 
@@ -234,21 +238,6 @@
                 {{ estadoArchivoCifrado }}
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     </div>
 
