--- a/src/app/components/cifrado-simetrico/cifrado-simetrico.html
+++ b/src/app/components/cifrado-simetrico/cifrado-simetrico.html
@@ -1,8 +1,12 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="full-screen-container flex items-center justify-center min-h-screen bg-black text-white px-4">
-  <div class="w-full max-w-4xl bg-black rounded-2xl shadow-xl p-8">
-    <div class="bg-gray-900 p-6 rounded-xl shadow-lg w-full space-y-6">
+<!-- FONDO MATRIX -->
+<app-matrix-bg></app-matrix-bg>
+
+<div class="full-screen-container flex items-center justify-center min-h-screen text-white px-4 relative">
+  <div class="w-full max-w-4xl bg-black bg-opacity-70 rounded-2xl shadow-xl p-8 backdrop-blur-md">
+    <div class="bg-gray-900 bg-opacity-70 p-6 rounded-xl shadow-lg w-full space-y-6 backdrop-blur-md">
+      
       <div class="text-center">
         <h1 class="text-green-400 text-4xl font-bold">Cifrado Simétrico</h1>
         <p class="text-white mt-2">Sube tu archivo o ingresa texto y una frase para encriptar</p>
@@ -16,13 +20,13 @@
       </div>
 
       <div class="flex flex-col gap-4">
-        <div class="bg-gray-800 p-4 rounded-lg">
+        <div class="bg-gray-800 bg-opacity-70 p-4 rounded-lg">
           <label class="block text-white font-medium mb-1">Texto</label>
           <input type="text" [(ngModel)]="textoPlano" placeholder="Ingrese el texto a encriptar"
             class="w-full p-2 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-green-500">
         </div>
 
-        <div class="bg-gray-800 p-4 rounded-lg">
+        <div class="bg-gray-800 bg-opacity-70 p-4 rounded-lg">
           <label class="block text-white font-medium mb-1">Frase para encriptar</label>
           <input type="text" [(ngModel)]="frase" placeholder="Ingrese la frase"
             class="w-full p-2 rounded-lg bg-gray-700 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-green-500">
@@ -57,7 +61,7 @@
         </table>
       </div>
 
-      <div *ngIf="resultadoCifrado" class="bg-gray-800 p-4 rounded-lg mt-4 break-words">
+      <div *ngIf="resultadoCifrado" class="bg-gray-800 bg-opacity-70 p-4 rounded-lg mt-4 break-words">
         <h2 class="font-semibold mb-2">Resultado:</h2>
         <textarea rows="6" readonly class="w-full p-2 rounded-lg bg-gray-700 text-white">{{resultadoCifrado}}</textarea>
       </div>
